--- a/WpfApp1/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/WpfApp1/MainWindow.xaml
@@ -105,9 +105,9 @@
             </StackPanel>
         </Grid>
         <!--file bar-->
-        <StackPanel DockPanel.Dock="Bottom">
+        <StackPanel DockPanel.Dock="Bottom" Height="120">
             <Label DockPanel.Dock="Top" Content="Files"/>
-            <StackPanel x:Name="FileBar" DockPanel.Dock="Bottom" Orientation="Horizontal" Height="100" Background="#FF414141" VerticalAlignment="Bottom"/>
+            <StackPanel x:Name="FileBar" DockPanel.Dock="Bottom" Orientation="Horizontal" Height="94" Background="#FF414141"/>
         </StackPanel>
         <!--mainscreen part-->
         <Grid>
@@ -116,13 +116,34 @@
             <!--main screen below-->
             <Image x:Name="image1" Margin="0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="0" MaxWidth="1025.6" MaxHeight="576"/>
 
-            <StackPanel x:Name="ToolBar" HorizontalAlignment="Right" VerticalAlignment="Stretch" RenderTransformOrigin="0.5,0.5" Background="#FF525252" Margin="0,0,0,0.4" Width="480" >
+            <StackPanel x:Name="ToolBar" HorizontalAlignment="Right" VerticalAlignment="Stretch" RenderTransformOrigin="0.5,0.5" Background="#FF525252" Margin="0,0,0,0.4" Width="360" >
                 <Image x:Name="image" HorizontalAlignment="Left" Height="180" VerticalAlignment="Top" Width="254"/>
                 <StackPanel Height="300">
-                    <Grid Background="#FF666666" RenderTransformOrigin="0.5,0.5" Margin="0" VerticalAlignment="Top" Height="60">
-                        <Label x:Name="label3" Content="Label" VerticalAlignment="Center" Margin="0,17,440,17"/>
-                        <Slider x:Name="slider0" VerticalAlignment="Center" Margin="40,21,240,21" Height="18" DragEnter="slider0_DragEnter" DragLeave="slider0_DragLeave" MouseWheel="slider0_MouseWheel"/>
-                        <TextBox x:Name="textBox" HorizontalAlignment="Right" Height="23" Margin="0" TextWrapping="Wrap" Text="0" VerticalAlignment="Center" Width="120" Background="#FF666666" BorderBrush="#FF888888" IsEnabled="False"/>
+                    <Grid Background="#FF666666" RenderTransformOrigin="0.5,0.5" Margin="0,0,-0.2,0" VerticalAlignment="Top" Height="60">
+                        <Grid.RenderTransform>
+                            <TransformGroup>
+                                <ScaleTransform/>
+                                <SkewTransform/>
+                                <RotateTransform/>
+                                <TranslateTransform/>
+                            </TransformGroup>
+                        </Grid.RenderTransform>
+                        <Label x:Name="label9" Content="Label" VerticalAlignment="Center" HorizontalAlignment="Left"/>
+                        <Slider x:Name="slider8" VerticalAlignment="Center" Height="18" Width="124.8"/>
+                        <TextBox x:Name="textBox5" HorizontalAlignment="Right" Height="23" TextWrapping="Wrap" Text="0" VerticalAlignment="Center" Width="120" Background="#FF666666" BorderBrush="#FF888888" IsEnabled="False"/>
+                    </Grid>
+                    <Grid Background="#FF666666" RenderTransformOrigin="0.5,0.5" Margin="0,0,-0.2,0" VerticalAlignment="Top" Height="60">
+                        <Grid.RenderTransform>
+                            <TransformGroup>
+                                <ScaleTransform/>
+                                <SkewTransform/>
+                                <RotateTransform/>
+                                <TranslateTransform/>
+                            </TransformGroup>
+                        </Grid.RenderTransform>
+                        <Label x:Name="label3" Content="Label" VerticalAlignment="Center" HorizontalAlignment="Left"/>
+                        <Slider x:Name="slider9" VerticalAlignment="Center" Height="18" Width="124.8"/>
+                        <TextBox x:Name="textBox6" Height="23" TextWrapping="Wrap" Text="0" VerticalAlignment="Center" Width="120" Background="#FF666666" BorderBrush="#FF888888" IsEnabled="False" HorizontalAlignment="Right"/>
                     </Grid>
                     <Grid Background="#FF666666" RenderTransformOrigin="0.5,0.5" Margin="0" VerticalAlignment="Top" Height="60">
                         <Grid.RenderTransform>
@@ -133,11 +154,11 @@
                                 <TranslateTransform/>
                             </TransformGroup>
                         </Grid.RenderTransform>
-                        <Label x:Name="label4" Content="Label" VerticalAlignment="Center" Margin="0,17,440,17"/>
-                        <Slider x:Name="slider1" VerticalAlignment="Center" Margin="40,21,240,21" DragEnter="slider1_DragEnter" DragLeave="slider1_DragLeave"/>
-                        <TextBox x:Name="textBox1" Height="23" Margin="0" TextWrapping="Wrap" Text="0" VerticalAlignment="Center" Width="120" HorizontalAlignment="Right" Background="#FF666666" BorderBrush="#FF888888" IsEnabled="False"/>
+                        <Label x:Name="label5" Content="Label" VerticalAlignment="Center" HorizontalAlignment="Left"/>
+                        <Slider x:Name="slider2" VerticalAlignment="Center" Height="18" Width="124.8"/>
+                        <TextBox x:Name="textBox2" HorizontalAlignment="Right" Height="23" TextWrapping="Wrap" Text="0" VerticalAlignment="Center" Width="120" Background="#FF666666" BorderBrush="#FF888888" IsEnabled="False"/>
                     </Grid>
-                    <Grid Background="#FF666666" RenderTransformOrigin="0.5,0.5" Margin="0" VerticalAlignment="Top" Height="60">
+                    <Grid Background="#FF666666" RenderTransformOrigin="0.5,0.5" Margin="0,0,-0.2,0" VerticalAlignment="Top" Height="60">
                         <Grid.RenderTransform>
                             <TransformGroup>
                                 <ScaleTransform/>
@@ -146,11 +167,11 @@
                                 <TranslateTransform/>
                             </TransformGroup>
                         </Grid.RenderTransform>
-                        <Label x:Name="label5" Content="Label" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="0,17"/>
-                        <Slider x:Name="slider2" Width="200" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="0,21,240,21" Height="18"/>
-                        <TextBox x:Name="textBox2" HorizontalAlignment="Right" Height="23" Margin="0" TextWrapping="Wrap" Text="0" VerticalAlignment="Center" Width="120" Background="#FF666666" BorderBrush="#FF888888" IsEnabled="False"/>
+                        <Label x:Name="label6" Content="Label" VerticalAlignment="Center" HorizontalAlignment="Left"/>
+                        <Slider x:Name="slider3" VerticalAlignment="Center" Height="18" Width="124.8"/>
+                        <TextBox x:Name="textBox3" HorizontalAlignment="Right" Height="23" TextWrapping="Wrap" Text="0" VerticalAlignment="Center" Width="120" Background="#FF666666" BorderBrush="#FF888888" IsEnabled="False"/>
                     </Grid>
-                    <Grid Background="#FF666666" RenderTransformOrigin="0.5,0.5" Margin="0" VerticalAlignment="Top" Height="60">
+                    <Grid Background="#FF666666" RenderTransformOrigin="0.5,0.5" Margin="0,0,-0.2,0" VerticalAlignment="Top" Height="60">
                         <Grid.RenderTransform>
                             <TransformGroup>
                                 <ScaleTransform/>
@@ -159,22 +180,9 @@
                                 <TranslateTransform/>
                             </TransformGroup>
                         </Grid.RenderTransform>
-                        <Label x:Name="label6" Content="Label" VerticalAlignment="Center" Margin="0,17,440,17"/>
-                        <Slider x:Name="slider3" VerticalAlignment="Center" Margin="40,21,240,21" Height="18"/>
-                        <TextBox x:Name="textBox3" HorizontalAlignment="Right" Height="23" Margin="0" TextWrapping="Wrap" Text="0" VerticalAlignment="Center" Width="120" Background="#FF666666" BorderBrush="#FF888888" IsEnabled="False"/>
-                    </Grid>
-                    <Grid Background="#FF666666" RenderTransformOrigin="0.5,0.5" Margin="0" VerticalAlignment="Top" Height="60">
-                        <Grid.RenderTransform>
-                            <TransformGroup>
-                                <ScaleTransform/>
-                                <SkewTransform/>
-                                <RotateTransform/>
-                                <TranslateTransform/>
-                            </TransformGroup>
-                        </Grid.RenderTransform>
-                        <Label x:Name="label7" Content="Label" VerticalAlignment="Center" Margin="0,17,440,17"/>
-                        <Slider x:Name="slider4" VerticalAlignment="Center" HorizontalContentAlignment="Center" Margin="40,22,240,22" Height="16"/>
-                        <TextBox x:Name="textBox4" HorizontalAlignment="Right" Height="22" Margin="0" TextWrapping="Wrap" Text="0" VerticalAlignment="Center" Width="120" Background="#FF666666" BorderBrush="#FF888888" IsEnabled="False"/>
+                        <Label x:Name="label7" Content="Label" VerticalAlignment="Center" HorizontalAlignment="Left"/>
+                        <Slider x:Name="slider4" VerticalAlignment="Center" Height="18" Width="124.8"/>
+                        <TextBox x:Name="textBox4" HorizontalAlignment="Right" Height="23" TextWrapping="Wrap" Text="0" VerticalAlignment="Center" Width="120" Background="#FF666666" BorderBrush="#FF888888" IsEnabled="False"/>
                     </Grid>
                 </StackPanel>
                 <Expander x:Name="EXIF" Header="EXIF" BorderBrush="#00000000" Expanded="Expander_Expanded" HorizontalContentAlignment="Left" VerticalContentAlignment="Stretch" BorderThickness="0" RenderTransformOrigin="0.5,0.5" Background="#FF666666" >
